# aConvolution-improved

./: .gitignore  CMakeLists.txt  GradW_256_256_16bits.raw  I1256_256_16bits.raw  README.md  _run.bat  aMyConvolution.cxx  aMyConvolution.h  aMyGrid.cxx  aMyGrid.h  gradW_3x3_16bits.raw  main.cpp  myfilter.cxx  run.sh
